        Create new model with FileManager.get().loadModel
        Read into an existing model with FileManager.get().readModel
        
   ARP
      o New support for non-Xerces SAX sources.
        Documentation shows how to parse a DOM as RDF.
      o ARP setup rationalized, a few methods deprecated as a result.
      o Improved documentation, covering new features, (see doc/ARP)
      


Jena 2.1 - Main changes from Jena 2.0
  Installation
      The names of some jars have changed be sure to update your classpath.
	  The name of the xerces jars are now: xercesImpl.jar and xml-apis.jar
	  We also require Jakarta commons logging: commons-logging.jar
	  See readme.html for the full list of jars.

  OWL Syntax Checker
      Major update from alpha version (Jena 2.0), to production
      version (Jena 2.1).
      API created.
      Many fold performance improvement (orders of
      magnitude)
      Now conformant with OWL Recommendation.
      Streaming mode added, suitable for lower memory
      environments or large input.
      Command-Line jena.owlsyntax program added.
      Still to do: better error messages.

  RDF/XML-ABBREV output
      Changes default configuration to not use property
      attributes, which seem unpopular.

  ARP
      Extended API to show bnode scope and XML Namespaces.
      Discovered memory leak which has been present since
      the beginning. This is not fixed. Users of ARP and
      Jena in memory limited, or long-running applications,
      or reading lots of varied RDF/XML, should read the
      updated Javadoc for the package
      com.hp.hpl.jena.rdf.arp.

  Reasoner
      Small bug fixes (see below).

  Xerces
      Now requires Xerces 2.6.0 or better. The included jars are Xerces 2.6.1.

  Ontology API
      General bug fixes and improvements based on jena-dev feedback.

      The default document manager policy (etc/ont-policy.rdf) no longer
      re-directs imports of owl.owl and daml+oil.daml to a cached copy in